--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "bluebird": "^3.1.5",
     "concat-with-sourcemaps": "^1.0.4",
-    "fs-extra-promise": "^0.3.1"
+    "fs-extra-promise": "^0.3.1",
+    "lodash": "^4.0.1",
+    "touch": "^1.0.0"
   }
 }
